WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152660
Overflow scrollIntoView wrong with borders
https://bugs.webkit.org/show_bug.cgi?id=152660
Summary
Overflow scrollIntoView wrong with borders
Simon Fraser (smfr)
Reported
2016-01-02 21:43:33 PST
Created
attachment 268128
[details]
Testcase Attached test case should scroll to 0 (or -200 in Firefox), not 10. The border is messing things up.
Attachments
Testcase
(1.21 KB, text/html)
2016-01-02 21:43 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(10.24 KB, patch)
2020-10-26 08:17 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Patch
(17.48 KB, patch)
2020-10-27 11:14 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-01-03 08:53:57 PST
I think this line maps into local coordinates, but those include the border box: LayoutRect localExposeRect(box->absoluteToLocalQuad(FloatQuad(FloatRect(rect))).boundingBox());
Martin Robinson
Comment 2
2020-10-26 08:17:22 PDT
Created
attachment 412317
[details]
Patch
Martin Robinson
Comment 3
2020-10-26 13:43:19 PDT
Looks like there are a few one pixel differences and some new passes. I should be able to update the results for these tomorrow.
Martin Robinson
Comment 4
2020-10-27 11:14:20 PDT
Created
attachment 412448
[details]
Patch
EWS
Comment 5
2020-10-27 14:04:20 PDT
Committed
r269070
: <
https://trac.webkit.org/changeset/269070
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412448
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-10-27 14:05:19 PDT
<
rdar://problem/70737529
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug